--- a/ios/CGNecommerce.xcodeproj/xcshareddata/xcschemes/CGNecommerce-tvOS.xcscheme
+++ b/ios/CGNecommerce.xcodeproj/xcshareddata/xcschemes/CGNecommerce-tvOS.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-               BuildableName = "CGNecommerce-tvOS.app"
-               BlueprintName = "CGNecommerce-tvOS"
-               ReferencedContainer = "container:CGNecommerce.xcodeproj">
+               BuildableName = "ecommerce-ui-tvOS.app"
+               BlueprintName = "ecommerce-ui-tvOS"
+               ReferencedContainer = "container:ecommerce-ui.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "CGNecommerce-tvOSTests.xctest"
-               BlueprintName = "CGNecommerce-tvOSTests"
-               ReferencedContainer = "container:CGNecommerce.xcodeproj">
+               BuildableName = "ecommerce-ui-tvOSTests.xctest"
+               BlueprintName = "ecommerce-ui-tvOSTests"
+               ReferencedContainer = "container:ecommerce-ui.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "CGNecommerce-tvOS.app"
-            BlueprintName = "CGNecommerce-tvOS"
-            ReferencedContainer = "container:CGNecommerce.xcodeproj">
+            BuildableName = "ecommerce-ui-tvOS.app"
+            BlueprintName = "ecommerce-ui-tvOS"
+            ReferencedContainer = "container:ecommerce-ui.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "CGNecommerce-tvOS.app"
-            BlueprintName = "CGNecommerce-tvOS"
-            ReferencedContainer = "container:CGNecommerce.xcodeproj">
+            BuildableName = "ecommerce-ui-tvOS.app"
+            BlueprintName = "ecommerce-ui-tvOS"
+            ReferencedContainer = "container:ecommerce-ui.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
