--- a/ios/CGNecommerce.xcodeproj/xcshareddata/xcschemes/CGNecommerce.xcscheme
+++ b/ios/CGNecommerce.xcodeproj/xcshareddata/xcschemes/CGNecommerce.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "CGNecommerce.app"
-               BlueprintName = "CGNecommerce"
-               ReferencedContainer = "container:CGNecommerce.xcodeproj">
+               BuildableName = "ecommerce-ui.app"
+               BlueprintName = "ecommerce-ui"
+               ReferencedContainer = "container:ecommerce-ui.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "CGNecommerceTests.xctest"
-               BlueprintName = "CGNecommerceTests"
-               ReferencedContainer = "container:CGNecommerce.xcodeproj">
+               BuildableName = "ecommerce-uiTests.xctest"
+               BlueprintName = "ecommerce-uiTests"
+               ReferencedContainer = "container:ecommerce-ui.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "CGNecommerce.app"
-            BlueprintName = "CGNecommerce"
-            ReferencedContainer = "container:CGNecommerce.xcodeproj">
+            BuildableName = "ecommerce-ui.app"
+            BlueprintName = "ecommerce-ui"
+            ReferencedContainer = "container:ecommerce-ui.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "CGNecommerce.app"
-            BlueprintName = "CGNecommerce"
-            ReferencedContainer = "container:CGNecommerce.xcodeproj">
+            BuildableName = "ecommerce-ui.app"
+            BlueprintName = "ecommerce-ui"
+            ReferencedContainer = "container:ecommerce-ui.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
